--- a/report/Applications of anomaly detection techniques to intrusion detection.tex
+++ b/report/Applications of anomaly detection techniques to intrusion detection.tex
@@ -26,7 +26,7 @@ Intrusion detection is a common cybersecurity task involving the inspection of a
 \end{abstract}
 
 \begin{IEEEkeywords}
-anomaly detection, intrusion detection, k-nearest neighbors, 
+machine learning, anomaly detection, intrusion detection
 \end{IEEEkeywords}
 
 \section{Introduction}
